--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
     "builds": [{
-        "src": "Sitio/wsgi.py",
+        "src": "manage.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
     }],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "Sitio/wsgi.py"
+            "dest": "manage.py"
         }
     ]
 }
