--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
         {
             "src": "/(.*)",
             "dest": "Sitio/wsgi.py"
-        }
+        },
+        {
+      "src": "/media/(.*)",
+      "dest": "/media/$1"
+    }
     ]
 }
