--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,10 @@
         "src": "Sitio/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
     }],
     "routes": [
         {
-      "src": "/static/(.*)",
+      "src": "/staticfiles/(.*)",
       "dest": "/static/$1"
     },
         {
